Fix layout issues when not all rows of courses are filled

--- a/wp-content/themes/meltingpot-child/style.css
+++ b/wp-content/themes/meltingpot-child/style.css
@@ -136,7 +136,7 @@ div.topic p, div.answer p {
 .wrap-benefit a:hover .BTN {background:#CC3333;}
 .wrap-benefit a .BTN {margin-right:0;}
 .wrap-benefit p {color:#fff;}
-.benefitimage {border-radius:50%;float:none;display:inline-block;width:95px;height:95px;background:#fff;padding:10px;border:5px solid #3AA6DE;-webkit-transition: all 0.5s ease-in-out;-moz-transition: all 0.5s ease-in-out;-ms-transition: all 0.5s ease-in-out;-o-transition: all 0.5s ease-in-out;transition: all 0.5s ease-in-out;}
+.benefitimage {border-radius:50%;float:none;display:inline-block;width:100px;height:100px;background:#fff;padding:10px;border:5px solid #3AA6DE;-webkit-transition: all 0.5s ease-in-out;-moz-transition: all 0.5s ease-in-out;-ms-transition: all 0.5s ease-in-out;-o-transition: all 0.5s ease-in-out;transition: all 0.5s ease-in-out;}
 .benefitimage img {height:auto;margin:0;width:auto;float:left;display:inline-block;}
 
 .wrap-benefit a:hover .benefitimage {border:5px solid #CC3333;}
